exports[`info get node fields 1`] = `
Array [
  Object {
    "args": Array [],
    "fields": Array [
      Object {
        "args": Array [],
        "fields": Array [],
        "isNode": false,
        "name": "field1",
      },
    ],
    "isNode": false,
    "name": "model1",
  },
]
`;

exports[`info get query connection fields simple 1`] = `
Array [
  Object {
    "args": Array [],
    "fields": Array [],
    "isNode": false,
    "name": "name",
  },
]
`;

exports[`info get query connection fields with fragments 1`] = `
Array [
  Object {
    "args": Array [],
    "fields": Array [
      Object {
        "args": Array [],
        "fields": Array [
          Object {
            "args": Array [],
            "fields": Array [
              Object {
                "args": Array [],
                "fields": Array [],
                "isNode": false,
                "name": "hasNextPage",
                "type": "Boolean",
              },
            ],
            "isNode": false,
            "name": "pageInfo",
            "type": "Model1ConnectionPageInfo",
          },
          Object {
            "args": Array [],
            "fields": Array [
              Object {
                "args": Array [],
                "fields": Array [
                  Object {
                    "args": Array [],
                    "fields": Array [],
                    "isNode": false,
                    "name": "field1",
                    "type": "String",
                  },
                  Object {
                    "args": Array [],
                    "fields": Array [
                      Object {
                        "args": Array [],
                        "fields": Array [],
                        "isNode": false,
                        "name": "field2",
                        "type": "Int",
                      },
                    ],
                    "isNode": true,
                    "name": "model2",
                    "type": "Model2",
                  },
                ],
                "isNode": true,
                "name": "node",
                "type": "Model1",
              },
            ],
            "isNode": false,
            "name": "edges",
            "type": "[Model1ConnectionEdge]!",
          },
        ],
        "isNode": false,
        "name": "model1",
        "type": "Model1Connection",
      },
    ],
    "isNode": true,
    "name": "viewer",
    "type": "Viewer",
  },
]
`;

exports[`info get query connection fields with fragments 2`] = `
Array [
  Object {
    "args": Array [],
    "fields": Array [],
    "isNode": false,
    "name": "field1",
    "type": "String",
  },
  Object {
    "args": Array [],
    "fields": Array [
      Object {
        "args": Array [],
        "fields": Array [],
        "isNode": false,
        "name": "field2",
        "type": "Int",
      },
    ],
    "isNode": true,
    "name": "model2",
    "type": "Model2",
  },
]
`;

exports[`info get query connection fields with fragments 3`] = `
"query Q1 {
  viewer {
    model1(first: 10) {
      pageInfo {
        hasNextPage
      }
      ...F1
    }
  }
}
fragment F1 on Model1Connection {
  edges {
    node {
      ...F2
    }
  }
}
fragment F2 on Model1 {
  field1
  model2 {
    field2
  }
}"
`;

exports[`info get query one fields 1`] = `
Array [
  Object {
    "args": Array [],
    "fields": Array [],
    "isNode": false,
    "name": "field1",
  },
  Object {
    "args": Array [],
    "fields": Array [
      Object {
        "args": Array [],
        "fields": Array [],
        "isNode": false,
        "name": "field2",
      },
    ],
    "isNode": false,
    "name": "model2",
  },
]
`;

exports[`info parse all fields 1`] = `
Array [
  Object {
    "args": Array [],
    "fields": Array [
      Object {
        "args": Array [],
        "fields": Array [
          Object {
            "args": Array [],
            "fields": Array [],
            "isNode": false,
            "name": "field1",
          },
        ],
        "isNode": false,
        "name": "model1",
      },
      Object {
        "args": Array [],
        "fields": Array [
          Object {
            "args": Array [],
            "fields": Array [],
            "isNode": false,
            "name": "field2",
          },
        ],
        "isNode": false,
        "name": "model2",
      },
    ],
    "isNode": false,
    "name": "node",
  },
]
`;

exports[`info simple query and print 1`] = `
Array [
  Object {
    "args": Array [],
    "fields": Array [],
    "isNode": false,
    "name": "test",
    "type": "String",
  },
]
`;

exports[`info simple query and print 2`] = `
"query Q1 {
  test
}
"
`;
